force-app/main/default/objects/HS_Cost_Allocation__c/HS_Cost_Allocation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>HS Cost Allocation</label>
</CustomObject>