force-app/main/default/objects/HS_Cost_Allocation__c/fields/Aqua__c.field-meta.xml
<CustomField>
    <fullName>Aqua__c</fullName>
    <label>Aqua</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>