force-app/main/default/objects/HS_Cost_Allocation__c/fields/Latch__c.field-meta.xml
<CustomField>
    <fullName>Latch__c</fullName>
    <label>Latch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>