force-app/main/default/objects/HS_Cost_Allocation__c/fields/Nergy__c.field-meta.xml
<CustomField>
    <fullName>Nergy__c</fullName>
    <label>Nergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>