force-app/main/default/objects/HS_Cost_Allocation__c/fields/Protection_Source__c.field-meta.xml
<CustomField>
    <fullName>Protection_Source__c</fullName>
    <label>Protection Source</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>